--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 	<title></title>
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 
-<p>Click here for a random Wiki</p>
+<div class="main container">
+<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><p>Click here for a random Wiki</p></a>
 <img src="">
 <p>Click icon to start your search</p>
+</div>
 
 </body>
 </html>
