--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<div class="main container">
-<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><p>Click here for a random Wiki</p></a>
+<div class="main container wiki text-center">
+<p>Click <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">here</a> for a random Wiki</p>
 <img src="">
 <p>Click icon to start your search</p>
 </div>
