--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
 		<div class="wiki-box">
 			<p>Click <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">here</a> for a random Wiki</p>
 
-			<button class="btn btn-default btn-lg">
+			<!-- <button class="btn btn-default btn-lg">
 			<span class="glyphicon glyphicon-search"><img src=""></span>
-			</button>
+			</button> -->
+
+			<input class="glyphicon glyphicon-search btn btn-default btn-lg" type="text" name="search" placeholder="What ya wanna Wiki?">
 
 			<p>Click icon to start your search</p>
 		</div>
 	</div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script type="text/javascript" src="./js/index.js"></script>
 
 </body>
 </html>
