Further CSS tweaks.
Changed the click here display to an image of gold wiki.

Added submit button for search. Added hover attributes to submit and
search box

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 
 	<div class="main container wiki text-center">
 		<div class="wiki-box">
-			<p>Click <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">here</a> for a random Wiki</p>
+			<p>Click <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/55/Wikipedia_logo_gold.png" width="60px" height="60px"></a> for a random Wiki</p>
 
 			<!-- <button class="btn btn-default btn-lg">
 			<span class="glyphicon glyphicon-search"><img src=""></span>
 			</button> -->
 
 			<input class="glyphicon glyphicon-search btn btn-default btn-lg" type="text" name="search" placeholder="What ya wanna Wiki?">
+			<br>
+			<input type="submit" name="Wiki that" value="Wiki that" class="submit btn">
 
-			<p>Click icon to start your search</p>
+			<!-- <p>Click icon to start your search</p> -->
 		</div>
 	</div>
 
