Added additional classes and ids

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 			<span class="glyphicon glyphicon-search"><img src=""></span>
 			</button> -->
 
-			<input class="glyphicon glyphicon-search btn btn-default btn-lg" type="text" name="search" placeholder="What ya wanna Wiki?">
+			<input class="btn btn-default btn-lg form-control" id="searchTerm" type="text" name="search" placeholder="What ya wanna Wiki?">
 			<br>
-			<input type="submit" name="Wiki that" value="Wiki that" class="submit btn">
+			<input type="submit" name="submit" value="Wiki What?" class="submit btn" id="search">
 
-			<!-- <p>Click icon to start your search</p> -->
+			<ul class="output">
+				
+			</ul>
+
 		</div>
 	</div>
 
